cambios en el carousel

--- a/site/public/stylesheets/management.css
+++ b/site/public/stylesheets/management.css
@@ -12,7 +12,7 @@
   /* The navigation menu */
   .navbar {
     overflow        : hidden;
-    background-color: rgba(218, 210, 210, 0.9);
+    background-color: rgba(235 244 249 / 0%);
   }
   
   
