--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -15,7 +15,7 @@
   --color-negro  : #050608;
   --color-gris   : #EDF2F4;
   --color-header : #361f27;
-  --color-grisos : #101118;
+  --color-grisos : /*#000c0f*/#101118;
   --color-rojo   : #D90429;
   --color-rosa   : #EF233C;
   --color-violeta: #631224;
