--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -36,21 +36,21 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/images/carr3.jpg" class="d-block w-100" alt="...">
+              <img src="/images/carr4.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Bienvenidos a Eclipse Web Site</h5>
                 <p>Disfrutá de la diversa variedad de los vinos mas ricos del país.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/carr1.jpg" class="d-block w-100" alt="...">
+              <img src="/images/carr5.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5 style="color: black;"></h5>
                 <p style="color: black;"></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/carr2.jpg" class="d-block w-100" alt="...">
+              <img src="images/carr6.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5></h5>
                 <p></p>
