agrega y modifica modal

--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -8,14 +8,17 @@
     <%- include('partials/header') %>
       <!-- /Header -->
 
+      
+
 
 <div class="modal-container">
   <div class="modal modal-close">
     <p class= "close2">X</p>
-    <img src="images/modal.svg" alt="">
+    <p class= "acept">Soy mayor de Edad</p>
+    <img src="images/modal1.svg" alt="">
     <div class="modal-textos">
-      <h2>Bienvenidos a Eclipse Web Site</h2>
-      <p>Debe ser mayor de edad para efectuar compras</p>
+      <h2>Bienvenido a Eclipse Web Site</h2>
+      <p>Disfruta con responsabilidad</p>
     </div>
 
   </div>
