--- a/site/public/stylesheets/management.css
+++ b/site/public/stylesheets/management.css
@@ -1,406 +1,426 @@
 /*=============== Administración - Carga de producto ===================*/
 
+.filter-black-management {
+  background-color: rgba(0, 0, 0, 0.7);
+  height          : 100%;
+}
+
+
+.container-management-index {
+  display        : flex;
+  align-items    : center;
+  justify-content: center;
+  flex-wrap      : wrap;
+
+}
+
+
+.management-index-background {
+  background-image   : url(../images/fondoadmin.jpg);
+  background-position: center;
+  background-repeat  : no-repeat;
+  background-size    : cover;
+  height             : 600px;
+
+}
+
+
+
 /*Menu navbar admin*/
 
 .container-navbar-admin {
 
-    display: flex;
-  }
-  
-  
-  
-  /* The navigation menu */
-  .navbar {
-    overflow        : hidden;
-    background-color: rgba(235 244 249 / 0%);
-  }
-  
-  
-  
-  /* Navigation links */
-  .navbar a {
-    float          : left;
-    font-size      : 16px;
-    color          : var(--color-grisos);
-    text-align     : center;
-    padding        : 14px 16px;
-    text-decoration: none;
-  }
-  
-  /* The subnavigation menu */
-  .subnav {
-    float   : left;
-    overflow: hidden;
-  }
-  
-  /* Subnav button */
-  .subnav .subnavbtn {
-    font-size       : 16px;
-    border          : none;
-    outline         : none;
-    color           : var(--color-rosa);
-    padding         : 14px 16px;
-    background-color: inherit;
-    font-family     : inherit;
-    margin          : 0;
-  }
-  
-  /* Add a red background color to navigation links on hover */
-  .navbar a:hover,
-  .subnav:hover .subnavbtn {
-    background-color: var(--color-gris);
-  }
-  
-  /* Style the subnav content - positioned absolute */
-  .subnav-content {
-    display         : none;
-    position        : absolute;
-    left            : 0;
-    background-color: var(--color-gris);
-    width           : 100%;
-    z-index         : 1;
-  }
-  
-  /* Style the subnav links */
-  .subnav-content a {
-    float          : left;
-    color          : var(--color-grisos);
-    text-decoration: none;
-  }
-  
-  /* Add a grey background color on hover */
-  .subnav-content a:hover {
-    background-color: var(--color-grisos);
-    color           : var(--color-gris);
-  }
-  
-  /* When you move the mouse over the subnav container, open the subnav content */
-  .subnav:hover .subnav-content {
-    display: block;
-  }
-  
-  /*------------------------------------------------*/
-  
-  /*Contenedor Formulario admin*/
-  
-  .contenedor-formulario-admin {
-    display   : flex;
-    margin-top: 50px;
-    flex-wrap : wrap;
-  
-  }
-  
-  
-  /*Titulo Formulario*/
-  
-  .form-title {
-    font-weight: normal;
-    color      : var(--color-rosa);
-    text-align : center;
-    padding    : 14px 0;
-  
-  }
-  
-  .form-title span {
-    color: var(--color-gris);
-  }
-  
-  /*Fondo formulario*/
-  
-  .form-admin {
-    background-color: rgba(0, 0, 0, 0.6);
-    color           : var(--color-grisos);
-    width           : 90%;
-    max-width       : 650px;
-    margin          : auto;
-    padding         : 5px 35px;
-    margin-top      : 38px;
-    margin-bottom   : 30px;
-    border-radius   : 3px;
-  }
-  
-  /*Labels Formulario*/
-  
-  .form-label {
-    display       : block;
-    color         : var(--color-gris);
-    font-size     : 16px;
-    position      : relative;
-    padding-bottom: 5px;
-  
-  }
-  
-  /*Contenedores input formulario*/
-  
-  .form-input,
-  .form-textarea,
-  .form-select {
-    background-color: rgba(0, 0, 0, .7);
-    border          : none;
-    outline         : none;
-    border-bottom   : 2px solid var(--color-rosa);
-    width           : 100%;
-    padding         : 12px;
-    margin-bottom   : 20px;
-    border-radius   : 2px;
-    font-size       : 14px;
-    color           : white;
-  
-  }
-  
-  /*Textarea formulario*/
-  
-  .form-textarea {
-    resize    : vertical;
-    max-height: 150px;
-    min-height: 50px;
-  
-  }
-  
-  /*Botón Carga producto*/
-  
-  .btn-submit-admin {
-    width     : 100%;
-    outline   : none;
-    background: var(--color-rosa);
-    font-size : 16px;
-    border    : none;
-    color     : white;
-    padding   : 15px 0;
-    cursor    : pointer;
-    transition: all .5s ease;
-    margin-top: 30px;
-  }
-  
-  .btn-submit-admin:hover {
-    background: var(--color-rojo);
-  
-  
-  }
-  
-  /*Botón adjuntar archivo*/
-  .file-upload {
-    display    : inline-flex;
-    align-items: center;
-    text-align : center;
-    font-size  : 15px;
-  }
-  
-  .file-upload__input {
-    display: none;
-  }
-  
-  .file-upload__button {
-    -webkit-appearance: none;
-    background        : var(--color-rosa);
-    border-style      : none;
-  
-    outline     : none;
-    padding     : 0.5em 0.8em;
-    margin-right: 15px;
-    color       : #ffffff;
-    font-size   : 16px;
-    transition: all .5s ease;
-    cursor      : pointer;
-  }
-  
-  .file-upload__button:hover {
-    background: var(--color-rojo);
-  }
-  
-  .file-upload__label {
-    max-width    : 250px;
-    font-size    : 0.95em;
-    text-overflow: ellipsis;
-    overflow     : hidden;
-    white-space  : nowrap;
-    color: var(--color-gris);
-  }
-  
-  
-  
-  /*------------------------------------------------*/
-  
-  /*=============== Administración - Lista de productos ===================*/
-  
-  .container-product-list-admin {
-    display: inline-flex;
-  
-    flex-wrap      : wrap;
-    justify-content: center;
-    padding        : 0%;
-    margin-top     : 30px;
-  }
-  
-  .box-product-list-admin {
-    background-color: rgba(0, 0, 0, .7);
-    border-radius   : 10px;
-    margin          : 20px;
-    padding         : 20px;
-    width           : 250px;
-    flex-wrap       : wrap;
-    align-items     : center;
-    justify-content : center;
-    display         : flex;
-  
-  }
-  
-  .box-product-list-admin a {
-    text-align: center;
-  }
-  
-  .box-product-list-admin a img {
-    width           : 90%;
-    background-color: white;
-    padding         : 5px;
-    margin          : 10px 0;
-    border-radius   : 10px;
-  }
-  
-  .btn-edit-admin {
-    width     : 100%;
-    outline   : none;
-    background: rgb(5, 148, 5);
-    font-size : 16px;
-    border    : none;
-    color     : white;
-    padding   : 15px 0;
-    cursor    : pointer;
-    transition: all .5s ease;
-    margin    : 5px;
-    text-align: center;
-  }
-  
-  .btn-edit-admin a {
-    text-decoration: none;
-    color          : white;
-  }
-  
-  .btn-edit-admin:hover {
-    background: #044e01;
-  
-  
-  }
-  
-  .container-btn-delete {
-    width       : 100%;
-    margin-right: 10px;
-  }
-  
-  
-  .btn-delete-admin {
-    width     : 100%;
-    outline   : none;
-    background: var(--color-rojo);
-    font-size : 16px;
-    border    : none;
-    color     : white;
-    padding   : 15px 0;
-    cursor    : pointer;
-    transition: all .5s ease;
-    margin    : 5px;
-  }
-  
-  .btn-delete-admin:hover {
-    background: #8a0303;
-  
-  
-  }
-  
-  /*=============== Administración Lista de Productos ===================*/
-  
-  .conteiner-index-admin {
-    display        : flex;
-    flex-direction : row wrap;
-    justify-content: center;
-    padding        : 0%;
-    margin-top     : 100px;
-    text-align     : center;
-  }
-  
-  
+  display: flex;
+}
+
+
+
+/* The navigation menu */
+.navbar {
+  overflow        : hidden;
+  background-color: rgba(235 244 249 / 0%);
+}
+
+
+
+/* Navigation links */
+.navbar a {
+  float          : left;
+  font-size      : 16px;
+  color          : var(--color-rosa);
+  text-align     : center;
+  padding        : 14px 16px;
+  text-decoration: none;
+}
+
+/* The subnavigation menu */
+.subnav {
+  float   : left;
+  overflow: hidden;
+}
+
+/* Subnav button */
+.subnav .subnavbtn {
+  font-size       : 16px;
+  border          : none;
+  outline         : none;
+  color           : var(--color-grisos);
+  padding         : 14px 16px;
+  background-color: inherit;
+  font-family     : inherit;
+  margin          : 0;
+}
+
+/* Add a red background color to navigation links on hover */
+.navbar a:hover,
+.subnav:hover .subnavbtn {
+  background-color: var(--color-gris);
+}
+
+/* Style the subnav content - positioned absolute */
+.subnav-content {
+  display         : none;
+  position        : absolute;
+  left            : 0;
+  background-color: var(--color-gris);
+  width           : 100%;
+  z-index         : 1;
+}
+
+/* Style the subnav links */
+.subnav-content a {
+  float          : left;
+  color          : var(--color-grisos);
+  text-decoration: none;
+}
+
+/* Add a grey background color on hover */
+.subnav-content a:hover {
+  background-color: var(--color-grisos);
+  color           : var(--color-gris);
+}
+
+/* When you move the mouse over the subnav container, open the subnav content */
+.subnav:hover .subnav-content {
+  display: block;
+}
+
+/*------------------------------------------------*/
+
+/*Contenedor Formulario admin*/
+
+.contenedor-formulario-admin {
+  display   : flex;
+  margin-top: 50px;
+  flex-wrap : wrap;
+
+}
+
+
+/*Titulo Formulario*/
+
+.form-title {
+  font-weight: normal;
+  color      : var(--color-rosa);
+  text-align : center;
+  padding    : 14px 0;
+
+}
+
+.form-title span {
+  color: var(--color-gris);
+}
+
+/*Fondo formulario*/
+
+.form-admin {
+  background-color: rgba(0, 0, 0, 0.6);
+  color           : var(--color-grisos);
+  width           : 90%;
+  max-width       : 650px;
+  margin          : auto;
+  padding         : 5px 35px;
+  margin-top      : 38px;
+  margin-bottom   : 30px;
+  border-radius   : 3px;
+}
+
+/*Labels Formulario*/
+
+.form-label {
+  display       : block;
+  color         : var(--color-gris);
+  font-size     : 16px;
+  position      : relative;
+  padding-bottom: 5px;
+
+}
+
+/*Contenedores input formulario*/
+
+.form-input,
+.form-textarea,
+.form-select {
+  background-color: rgba(0, 0, 0, .7);
+  border          : none;
+  outline         : none;
+  border-bottom   : 2px solid var(--color-rosa);
+  width           : 100%;
+  padding         : 12px;
+  margin-bottom   : 20px;
+  border-radius   : 2px;
+  font-size       : 14px;
+  color           : white;
+
+}
+
+/*Textarea formulario*/
+
+.form-textarea {
+  resize    : vertical;
+  max-height: 150px;
+  min-height: 50px;
+
+}
+
+/*Botón Carga producto*/
+
+.btn-submit-admin {
+  width     : 100%;
+  outline   : none;
+  background: var(--color-rosa);
+  font-size : 16px;
+  border    : none;
+  color     : white;
+  padding   : 15px 0;
+  cursor    : pointer;
+  transition: all .5s ease;
+  margin-top: 30px;
+}
+
+.btn-submit-admin:hover {
+  background: var(--color-rojo);
+
+
+}
+
+/*Botón adjuntar archivo*/
+.file-upload {
+  display    : inline-flex;
+  align-items: center;
+  text-align : center;
+  font-size  : 15px;
+}
+
+.file-upload__input {
+  display: none;
+}
+
+.file-upload__button {
+  -webkit-appearance: none;
+  background        : var(--color-rosa);
+  border-style      : none;
+
+  outline     : none;
+  padding     : 0.5em 0.8em;
+  margin-right: 15px;
+  color       : #ffffff;
+  font-size   : 16px;
+  transition  : all .5s ease;
+  cursor      : pointer;
+}
+
+.file-upload__button:hover {
+  background: var(--color-rojo);
+}
+
+.file-upload__label {
+  max-width    : 250px;
+  font-size    : 0.95em;
+  text-overflow: ellipsis;
+  overflow     : hidden;
+  white-space  : nowrap;
+  color        : var(--color-gris);
+}
+
+
+
+/*------------------------------------------------*/
+
+/*=============== Administración - Lista de productos ===================*/
+
+.container-product-list-admin {
+  display: inline-flex;
+
+  flex-wrap      : wrap;
+  justify-content: center;
+  padding        : 0%;
+  margin-top     : 30px;
+}
+
+.box-product-list-admin {
+  background-color: rgba(0, 0, 0, .7);
+  border-radius   : 10px;
+  margin          : 20px;
+  padding         : 20px;
+  width           : 250px;
+  flex-wrap       : wrap;
+  align-items     : center;
+  justify-content : center;
+  display         : flex;
+
+}
+
+.box-product-list-admin a {
+  text-align: center;
+}
+
+.box-product-list-admin a img {
+  width           : 90%;
+  background-color: white;
+  padding         : 5px;
+  margin          : 10px 0;
+  border-radius   : 10px;
+}
+
+.btn-edit-admin {
+  width     : 100%;
+  outline   : none;
+  background: rgb(5, 148, 5);
+  font-size : 16px;
+  border    : none;
+  color     : white;
+  padding   : 15px 0;
+  cursor    : pointer;
+  transition: all .5s ease;
+  margin    : 5px;
+  text-align: center;
+}
+
+.btn-edit-admin a {
+  text-decoration: none;
+  color          : white;
+}
+
+.btn-edit-admin:hover {
+  background: #044e01;
+
+
+}
+
+.container-btn-delete {
+  width       : 100%;
+  margin-right: 10px;
+}
+
+
+.btn-delete-admin {
+  width     : 100%;
+  outline   : none;
+  background: var(--color-rojo);
+  font-size : 16px;
+  border    : none;
+  color     : white;
+  padding   : 15px 0;
+  cursor    : pointer;
+  transition: all .5s ease;
+  margin    : 5px;
+}
+
+.btn-delete-admin:hover {
+  background: #8a0303;
+
+
+}
+
+/*=============== Administración Lista de Productos ===================*/
+
+.conteiner-index-admin {
+
+  margin-top: 15%;
+  text-align: center;
+  width     : 100%;
+}
+
+
+.contenedor-formulario-admin img {
+  display         : inline;
+  width           : 100%;
+  padding         : 30px;
+  background-color: grey;
+  margin          : 10px 0;
+  display         : flex;
+}
+
+
+/*=============== Administración - Search ===================*/
+
+.wrapper {
+  position         : absolute;
+  /*top            : 50%;*/
+  left             : 50%;
+  transform        : translate(-50%, -50%);
+  background       : rgba(0, 0, 0, 0.6);
+  max-width        : 550px;
+  width            : 100%;
+  padding          : 15px;
+  display          : flex;
+  justify-content  : space-between;
+  border-radius    : 5px;
+}
+
+.wrapper .input {
+  width        : 85%;
+  padding      : 15px 20px;
+  border       : none;
+  border-radius: 5px;
+  font-weight  : bold;
+}
+
+.searchbtn {
+  background   : var(--color-rojo);
+  width        : 10%;
+  border-radius: 5px;
+  position     : relative;
+  cursor       : pointer;
+  color        : white;
+  border       : none;
+  font-size    : 25px;
+}
+
+.searchbtn .fas {
+  position : absolute;
+  top      : 50%;
+  left     : 50%;
+  transform: translate(-50%, -50%);
+  font-size: 18px;
+}
+
+
+@media (min-width: 768px) {
   .contenedor-formulario-admin img {
-    display         : inline;
-    width           : 100%;
-    padding         : 30px;
-    background-color: grey;
-    margin          : 10px 0;
-    display         : flex;
+    margin: 0 20%;
+    width : 60%;
   }
-  
-  
-  /*=============== Administración - Search ===================*/
-  
-  .wrapper {
-    position         : absolute;
-    /*top            : 50%;*/
-    left             : 50%;
-    transform        : translate(-50%, -50%);
-    background       : rgba(0, 0, 0, 0.6);
-    max-width        : 550px;
-    width            : 100%;
-    padding          : 15px;
-    display          : flex;
-    justify-content  : space-between;
-    border-radius    : 5px;
-  }
-  
-  .wrapper .input {
-    width        : 85%;
-    padding      : 15px 20px;
-    border       : none;
-    border-radius: 5px;
-    font-weight  : bold;
-  }
-  
-  .searchbtn {
-    background   : var(--color-rojo);
-    width        : 10%;
-    border-radius: 5px;
-    position     : relative;
-    cursor       : pointer;
-    color        : white;
-    border       : none;
-    font-size    : 25px;
-  }
-  
-  .searchbtn .fas {
-    position : absolute;
-    top      : 50%;
-    left     : 50%;
-    transform: translate(-50%, -50%);
-    font-size: 18px;
-  }
-  
-  
-  @media (min-width: 768px) {
-    .contenedor-formulario-admin img {
-      margin: 0 20%;
-      width : 60%;
-  
-    }
-  }
-  
-  /*================ Administración - Results ==================*/
-  .container-title-result {
-    width       : 100%;
-    padding-left: 30px;
-  
-  }
-  
-  
-  /*=============== Administración - Usuario Index ===================*/
-  .avatar-usuario {
-    display        : flex;
-    justify-content: center;
-  
-  }
-  
-  .avatar-usuario img {
-    height       : 120px;
-    border-radius: 10px;
-    margin-top   : 25px;
-    border-style : ridge;
-    border-width : 7px;
-  }
-  
+
+
+}
+
+/*================ Administración - Results ==================*/
+.container-title-result {
+  width       : 100%;
+  padding-left: 30px;
+
+}
+
+
+/*=============== Administración - Usuario Index ===================*/
+
+
+.avatar-usuario img {
+  height       : 120px;
+  border-radius: 10px;
+  margin-top   : 25px;
+  border-style : ridge;
+  border-width : 7px;
+}
