--- a/site/public/stylesheets/modal.css
+++ b/site/public/stylesheets/modal.css
@@ -7,16 +7,17 @@
     height: 100vh;
     top: 0;
     left:0;
-    background-color: rgba(0, 0, 0, .7);
+   /* background-color: rgba(0, 0, 0, .7);*/
+   background-image   : url('../images/fondo5.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
   .modal {
-    width: 40%;
-    height: 50%;
-    background-color: var(--color-gris);
+    width: 60%;
+    height: 60%;
+    background-color: rgba(0, 0, 0, 0.7);
     text-align: center;
     display: flex;
     flex-direction:column ;
@@ -27,6 +28,28 @@
     border-radius: 10px;
    
   }
+
+  .acept {
+    padding: 2px;
+    margin: 10px 0;
+    position: absolute;
+    bottom: 2px;
+    right: 38%;
+    display: inline-block;
+    width: 25%;
+    height: 5vh;
+    background-color: #0980bf;
+    color: var(--color-gris);
+    line-height: 25px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 1s ease-in;
+      }
+  
+    .acept:hover {
+      background-color: var(--color-gris);
+      color: #0980bf;
+      }
   
   .close2 {
     position: absolute;
@@ -40,7 +63,7 @@
     line-height: 25px;
     cursor: pointer;
     border-radius: 50%;
-    transition: all 0.3s ease-in;
+    transition: 1s ease-in;
   }
   
   .close2:hover {
@@ -51,7 +74,7 @@
   }
   
   .modal-textos > h2 {
-    color: var(--color-grisos);
+    color: var(--color-gris);
   
   }
   .modal-textos > p {
