--- a/site/views/Admin/adminIndex.ejs
+++ b/site/views/Admin/adminIndex.ejs
@@ -12,12 +12,16 @@
 	<!-- /Header -->
 
 
-<body style="background-color:gray;">
+<div class="management-index-background">
+  <div class="filter-black-management">
+  <div class="container-management-index">
 <div class="conteiner-index-admin">
-  <h1>BIENVENIDO/A ADMINISTRADOR <span style="color: crimson;"><%= user.name.toUpperCase() %></span></h1>
+  <h1>BIENVENID<% if (user.sex_id == 1) { %>O<% }else{ %>A<%}  %>   <span style="color: crimson;"><%= user.name.toUpperCase() %></span></h1>
 </div>
-<div class="avatar-usuario"><img src="/images/<%- user.avatar %> " alt=""></div>
-<%- include('./partials/footer')  %> 
-</body>
+<div class="avatar-usuario"><img src="/images/<%- user.avatar %> " alt=""></div></div>
+
+
+
+</div></div></body>
 
 </html> 
