--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -8,21 +8,29 @@
     <%- include('partials/header') %>
       <!-- /Header -->
 
-      
+      <div class="modal-container2">
+        <div class="modal2 modal-close2">
+          <img src="images/modal2.svg" alt="">
+          <div class="modal-textos2">
+            <h2>Lo siento debes ser mayor de edad</h2>
+          </div>
+
+        </div>
+      </div>
 
 
-<div class="modal-container">
-  <div class="modal modal-close">
-    <p class= "close2">X</p>
-    <p class= "acept">Soy mayor de Edad</p>
-    <img src="images/modal1.svg" alt="">
-    <div class="modal-textos">
-      <h2>Bienvenido a Eclipse Web Site</h2>
-      <p>Disfruta con responsabilidad</p>
-    </div>
+      <div class="modal-container">
+        <div class="modal modal-close">
+          <p class="close2">X</p>
+          <p class="acept">Soy mayor de Edad</p>
+          <img src="images/modal1.svg" alt="">
+          <div class="modal-textos">
+            <h2>Bienvenido a Eclipse Web Site</h2>
+            <p>Disfruta con responsabilidad</p>
+          </div>
 
-  </div>
-</div>
+        </div>
+      </div>
 
 
 
@@ -41,22 +49,19 @@
             <div class="carousel-item active">
               <img src="/images/carr4.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Bienvenidos a Eclipse Web Site</h5>
-                <p>Disfrutá de la diversa variedad de los vinos mas ricos del país.</p>
+             
               </div>
             </div>
             <div class="carousel-item">
               <img src="/images/carr5.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5 style="color: black;"></h5>
-                <p style="color: black;"></p>
+         
               </div>
             </div>
             <div class="carousel-item">
               <img src="images/carr6.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5></h5>
-                <p></p>
+           
               </div>
             </div>
           </div>
@@ -170,62 +175,63 @@
 
 
 
-     
 
 
 
-  <div class="contenedor">
-     <div class="carousel">
-    <div class="carousel__contenedor">
-      <button aria-label="Anterior" class="carousel__anterior">
-        <i class="fas fa-chevron-left"></i>
-      </button>
-    
-      <div class="carousel__lista">
-        <% masVendidos.forEach(product=> { %>
-        <div class="carousel__elemento">
-          <section class="producto-box">
-            <figure class="imagen-producto">
-              <img src="/images/<%- product.image %> " alt="">
-            </figure>
-            <% if (product.free_shipping> 0) { %>
-              <div class="envio-promo"><span>Envio gratis</span></div>
-              <% } %>
-                <% if (product.discount> 0) { %>
-                  <div class="descuento"><span>
-                      <%- product.discount %> % OFF
-                    </span></div>
-                  <% } %>
-                    <article class="datos-articulo">
-                      <h2>
-                        <%-product.title%>
-                      </h2>
-                      <div class="precio">
+
+      <div class="contenedor">
+        <div class="carousel">
+          <div class="carousel__contenedor">
+            <button aria-label="Anterior" class="carousel__anterior">
+              <i class="fas fa-chevron-left"></i>
+            </button>
+
+            <div class="carousel__lista">
+              <% vinosTintos.forEach(product=> { %>
+                <div class="carousel__elemento">
+                  <section class="producto-box">
+                    <figure class="imagen-producto">
+                      <img src="/images/<%- product.image %> " alt="">
+                    </figure>
+                    <% if (product.free_shipping> 0) { %>
+                      <div class="envio-promo"><span>Envio gratis</span></div>
+                      <% } %>
                         <% if (product.discount> 0) { %>
-                        <span class="precio-real">$<%- toThousand(product.price) %> </span>
-                        <% } %>
-                        <span class="precio-desc">$<%- toThousand(product.price - Math.round(product.price / 100 * product.discount)) %> </span>
-                      </div>
-                      <div class="button-agregar">
-                        <form action="/products/detail/<%- product.id %>" method="GET">
-                        <button type="submit" class="button-compra">Agregar</button>
-                      </form>
-                      </div>
-                    </article>
-          </section>
+                          <div class="descuento"><span>
+                              <%- product.discount %> % OFF
+                            </span></div>
+                          <% } %>
+                            <article class="datos-articulo">
+                              <h2>
+                                <%-product.title%>
+                              </h2>
+                              <div class="precio">
+                                <% if (product.discount> 0) { %>
+                                  <span class="precio-real">$<%- toThousand(product.price) %> </span>
+                                  <% } %>
+                                    <span class="precio-desc">$<%- toThousand(product.price - Math.round(product.price /
+                                        100 * product.discount)) %> </span>
+                              </div>
+                              <div class="button-agregar">
+                                <form action="/products/detail/<%- product.id %>" method="GET">
+                                  <button type="submit" class="button-compra">Agregar</button>
+                                </form>
+                              </div>
+                            </article>
+                  </section>
+                </div>
+                <% }) %>
+            </div>
+          </div>
+
+          <button aria-label="Siguiente" class="carousel__siguiente">
+            <i class="fas fa-chevron-right"></i>
+          </button>
         </div>
-        <% }) %>
+
+        <div role="tablist" class="carousel__indicadores"></div>
       </div>
       </div>
-
-      <button aria-label="Siguiente" class="carousel__siguiente">
-        <i class="fas fa-chevron-right"></i>
-      </button>
-    </div>
-
-    <div role="tablist" class="carousel__indicadores"></div>
-  </div>
-</div>
 
 
 
@@ -271,64 +277,65 @@
 
       <div class="contenedor">
         <div class="carousel">
-       <div class="carousel__contenedor2">
-         <button aria-label="Anterior" class="carousel__anterior2">
-           <i class="fas fa-chevron-left"></i>
-         </button>
-       
-         <div class="carousel__lista2">
-           <% masVendidos.forEach(product=> { %>
-           <div class="carousel__elemento2">
-             <section class="producto-box">
-               <figure class="imagen-producto">
-                 <img src="/images/<%- product.image %> " alt="">
-               </figure>
-               <% if (product.free_shipping> 0) { %>
-                 <div class="envio-promo"><span>Envio gratis</span></div>
-                 <% } %>
-                   <% if (product.discount> 0) { %>
-                     <div class="descuento"><span>
-                         <%- product.discount %> % OFF
-                       </span></div>
-                     <% } %>
-                       <article class="datos-articulo">
-                         <h2>
-                           <%-product.title%>
-                         </h2>
-                         <div class="precio">
-                           <% if (product.discount> 0) { %>
-                           <span class="precio-real">$<%- toThousand(product.price) %> </span>
-                           <% } %>
-                           <span class="precio-desc">$<%- toThousand(product.price - Math.round(product.price / 100 * product.discount)) %> </span>
-                         </div>
-                         <div class="button-agregar">
-                           <form action="/products/detail/<%- product.id %>" method="GET">
-                           <button type="submit" class="button-compra">Agregar</button>
-                         </form>
-                         </div>
-                       </article>
-             </section>
-           </div>
-           <% }) %>
-         </div>
-         </div>
-   
-         <button aria-label="Siguiente" class="carousel__siguiente2">
-           <i class="fas fa-chevron-right"></i>
-         </button>
-       </div>
-   
-       <div role="tablist" class="carousel__indicadores2"></div>
-     </div>
-   </div>
-   
-      
+          <div class="carousel__contenedor2">
+            <button aria-label="Anterior" class="carousel__anterior2">
+              <i class="fas fa-chevron-left"></i>
+            </button>
+
+            <div class="carousel__lista2">
+              <% vinosBlancos.forEach(product=> { %>
+                <div class="carousel__elemento2">
+                  <section class="producto-box">
+                    <figure class="imagen-producto">
+                      <img src="/images/<%- product.image %> " alt="">
+                    </figure>
+                    <% if (product.free_shipping> 0) { %>
+                      <div class="envio-promo"><span>Envio gratis</span></div>
+                      <% } %>
+                        <% if (product.discount> 0) { %>
+                          <div class="descuento"><span>
+                              <%- product.discount %> % OFF
+                            </span></div>
+                          <% } %>
+                            <article class="datos-articulo">
+                              <h2>
+                                <%-product.title%>
+                              </h2>
+                              <div class="precio">
+                                <% if (product.discount> 0) { %>
+                                  <span class="precio-real">$<%- toThousand(product.price) %> </span>
+                                  <% } %>
+                                    <span class="precio-desc">$<%- toThousand(product.price - Math.round(product.price /
+                                        100 * product.discount)) %> </span>
+                              </div>
+                              <div class="button-agregar">
+                                <form action="/products/detail/<%- product.id %>" method="GET">
+                                  <button type="submit" class="button-compra">Agregar</button>
+                                </form>
+                              </div>
+                            </article>
+                  </section>
+                </div>
+                <% }) %>
+            </div>
+          </div>
+
+          <button aria-label="Siguiente" class="carousel__siguiente2">
+            <i class="fas fa-chevron-right"></i>
+          </button>
+        </div>
+
+        <div role="tablist" class="carousel__indicadores2"></div>
+      </div>
+      </div>
+
+
 
       <!-- footer -->
       <%- include('partials/footer') %>
         <!-- /footer -->
-        
-       
+
+
   </body>
 
 </html>
