--- a/site/public/stylesheets/modal2.css
+++ b/site/public/stylesheets/modal2.css
@@ -43,6 +43,21 @@
   
   
   .modal2 > img{
-    height: 50%;
+    height: 30%;
   }
   
+  
+  @media (min-width: 768px) {
+    
+    .modal > img{
+      height: 50%;
+    }
+    }
+  
+  
+    @media (min-width: 1024px) {
+      
+    .modal > img{
+      height: 50%;
+    }
+    }
