--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -12,10 +12,12 @@
 /*VARIABLES*/
 
 :root {
-  --color-negro  : #050608;
-  --color-gris   : #EDF2F4;
-  --color-header : #361f27;
-  --color-grisos : /*#000c0f*/#101118;
+  --color-negro : #050608;
+  --color-gris  : #EDF2F4;
+  --color-header: #361f27;
+  --color-grisos:
+    /*#000c0f*/
+    #101118;
   --color-rojo   : #D90429;
   --color-rosa   : #EF233C;
   --color-violeta: #631224;
@@ -183,7 +185,7 @@ header nav ul li a:hover {
   display         : flex;
   background-color: var(--color-gris);
   padding         : 5px 0;
- 
+  margin          : 0;
   align-items     : center;
   box-shadow      : 0px 0px 5px rgb(0 0 0 / 60%);
 }
@@ -804,11 +806,6 @@ ul {
     position: relative;
   }
 
-
-
-
-
-
   .p-container article i {
     font-size: 45px;
   }
@@ -827,3 +824,113 @@ ul {
 
 
 
+/* LANZAMIENTO */
+
+.wine-blue-container {
+  display    : flex;
+  flex-wrap  : wrap;
+  align-items: center;
+  width: 100%;
+
+}
+
+.wine-blue-img {
+  background-color: white;
+  width           : 100%;
+  display         : flex;
+  justify-content : center;
+}
+
+.wine-blue-img>img {
+  background-color: white;
+  width           : 80%;
+}
+
+.wine-blue-description {
+  background-image   : url('../images/copas.jpg');
+  background-size    : cover;
+  background-position: center;
+  height             : 450px;
+}
+
+.wine-blue-filter {
+  background-color: rgba(0, 0, 0, .3);
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+.wine-blue-filter > h2 {
+text-decoration: underline;
+  margin-top: 15px;
+}
+
+.wine-blue-filter > p {
+  text-align: center;
+}
+
+.wine-blue-filter > a {
+background-color: #02363d;
+    border: #e9ecef 2px solid;
+    padding: 5px;
+    border-radius: 30px;
+    font-size: 16px;
+    text-decoration: none;
+    
+    color: white;
+    height: 40px;
+    transition: all 0.3s ease-in-out;
+}
+
+
+.wine-blue-filter > a:hover{
+background-color: white;
+border: #02363d 2px solid;
+color: #02363d;
+
+
+}
+
+
+@media (min-width: 768px) {
+  .wine-blue-container {
+      height: 450px;
+}
+
+.wine-blue-img {
+  width: 40%;
+  height: 100%;
+}
+.wine-blue-description {
+ 
+  height: 100%;
+  width: 60%;
+}
+
+.wine-blue-img>img {
+ 
+  width           : auto;
+}
+}
+
+@media (min-width: 1024px) {
+  .wine-blue-container {
+    height: 450px;
+}
+
+.wine-blue-img {
+width: 40%;
+height: 100%;
+}
+.wine-blue-description {
+
+height: 100%;
+width: 60%;
+}
+
+.wine-blue-img>img {
+
+width           : auto;
+}
+}
