--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -49,19 +49,19 @@
             <div class="carousel-item active">
               <img src="/images/carr4.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-             
+
               </div>
             </div>
             <div class="carousel-item">
               <img src="/images/carr5.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-         
+
               </div>
             </div>
             <div class="carousel-item">
               <img src="images/carr6.png" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-           
+
               </div>
             </div>
           </div>
@@ -328,6 +328,27 @@
         <div role="tablist" class="carousel__indicadores2"></div>
       </div>
       </div>
+
+
+
+      <div class="wine-blue-container">
+
+        <div class="wine-blue-img">
+          <img src="/images/wine-blue.png" alt="">
+        </div>
+        <div class="wine-blue-description">
+          <div class="wine-blue-filter">
+          <h2>¿Por qué es Azul?</h2>
+          <p> El color azul nos recuerda al Mar Mediterráneo, su cultura y gastronomía. Hecho con uvas Chardonnay, Alma Azul debe su elegante color azul a un pigmento natural llamado Antocianina y presente en la piel de las uvas, que es inofensivo para la salud y comúnmente utilizado como aditivo alimentario y fuente de antioxidantes.</p>
+          <a href="/products/detail/16?">Comprar</a>
+        </div>
+        </div>
+      </div>
+
+
+
+
+
 
 
 
