--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -43,7 +43,11 @@
 }
 
 body {
-  background-color: var(--color-grisos);
+  background: #0F2027;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to left #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  /*background-color: var(--color-grisos);*/
   color           : var(--color-gris);
   font-family     : var(--fuente);
   position        : relative;
