--- a/site/views/login.ejs
+++ b/site/views/login.ejs
@@ -1,89 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%-include("partials/head")%>
+<%-include("partials/head")%>
+
   <body>
-<%-include("partials/header")%>
+    <%-include("partials/header")%>
 
-<main class="container-register-login">
-<form action="" method="post" class="form-register"id="form">
-  <div class="form-register-div">
-    <h1>CREAR CUENTA</h1>
-    <p>Si todavia no tienes una Cuenta en Eclipse, registrate ingresando estos datos:</p>
+      <main class="container-register-login">
+        <form action="/ingreso/register" method="POST" enctype="multipart/form-data" class="form-register" id="form">
+          <div class="form-register-div">
+            <h1>CREAR CUENTA</h1>
+            <p>Si todavia no tienes una Cuenta en Eclipse, registrate ingresando estos datos:</p>
 
-    <div class="gruop-register">
-      <input type="text" name="" id="name" required><span class="barra"></span>
-      <label class="label-register" for="">Nombre</label>
-    </div> 
+            <div class="group-register">
+              <input type="text" name="name" id="name"  value="<%= typeof old != 'undefined' && old.name ? old.name : null %>" required><span class="barra"></span>
+              <label class="label-register" for="">Nombre</label>
+            </div>
 
-    <div class="gruop-register">
-      <input type="text" name="" id="lastname" required><span class="barra"></span>
-      <label class="label-register" for="">Apellido</label>
-    </div> 
+            <div class="group-register">
+              <input type="text" name="lastName" id="lastname" value="<%= typeof old != 'undefined' && old.lastName ? old.lastName : null %>" required><span class="barra"></span>
+              <label class="label-register" for="">Apellido</label>
+            </div>
 
-    <div class="gruop-register">
-      <input type="date" name="" id="date" required><span class="barra" placeholder=""></span>
-      <label class="label-register" for="">Fecha de Nacimiento</label></div> 
-
-  
-      <div class="gruop-register">
-        <label class="label-select-register" for="" >Género</label>
-   <select name="discount" id="discount" class="select-register" required>
-    <option value="">Seleccione una opción</option>
-     <option class="form-option" value="1">Masculino</option>
-     <option class="form-option" value="2">Femenino</option></select>
-  </div> 
-  
-   
-
-    <div class="gruop-register">
-      <input type="email" name="" id="email" required><span class="barra"></span>
-      <label class="label-register" for="">Email</label>
-    </div> 
-
-    <div class="gruop-register">
-      <input type="password" name="" id="password1" required><span class="barra"></span>
-      <label class="label-register" for="">Contraseña</label>
-    </div> 
-
-    <div class="gruop-register">
-      <input type="password" name="" id="password2" required><span class="barra"></span>
-      <label class="label-register" for="">Reingrese Contraseña</label>
-    </div> 
-
-  
+            <div class="group-register">
+              <input type="date" name="date" min="1900" id="date" placeholder="" value="<%= typeof old != 'undefined' && old.date ? old.date : null %>" required><span class="barra"></span>
+              <label class="label-register" for="">Fecha de Nacimiento</label>
+            </div>
 
 
-<button class="submit-form-register" type="submit">Registrarse</button>
-    
-  </div>
-</form>
+            <div class="group-register">
+
+           
+
+              <select name="sex_id" id="sex_id" class="select-register" required>
+                <option value="">Seleccione una opción</option>
+                <option class="form-option" value="1" <% if (typeof old != 'undefined' && old.sex_id == 1) { %>selected<% } %> >Masculino</option>
+                <option class="form-option" value="2" <% if (typeof old != 'undefined' && old.sex_id == 2) { %>selected<% } %>>Femenino</option>
+              </select>
+              <label class="label-select-register" for="">Género</label>
+              <span class="barra"></span>
+            </div>
 
 
 
+            <div class="group-register">
+              <input type="email" name="email" id="email" value="<%= typeof old != 'undefined' && old.email ? old.email : null %>" required><span class="barra"></span>
+              <label class="label-register" for="">Email</label>
+            </div>
 
-<form action="" method="post" class="form-register"id="form">
-  <div class="form-register-div">
-    <h1>INGRESAR</h1>
-    <p>Si ya estas Registrado en Bodegas Eclipse, ingresa en tu cuenta con tu Email y la contraseña adecuada:</p>
+            <div class="group-register">
+              <input type="password" name="password" id="password-register" required><span class="barra"></span>
+              <label class="label-register" for="">Contraseña</label>
+            </div>
 
-    <div class="gruop-register">
-      <input type="text" name="" id="name" required><span class="barra"></span>
-      <label class="label-register" for="">Nombre</label>
-    </div> 
-
-    <div class="gruop-register">
-      <input type="text" name="" id="lastname" required><span class="barra"></span>
-      <label class="label-register"for="">Apellido</label>
-    </div>  
-<button class="submit-form-register" type="submit">Ingresar</button>
-    
-  </div>
-</form>
+            <div class="group-register">
+              <input type="password" name="password-check" id="password-register-check" required><span class="barra"></span>
+              <label class="label-register" for="">Reingrese Contraseña</label>
+            </div>
 
 
 
-</main>
-<%- include("partials/footer") %>
-<script src="/javascripts/placeholderDate.js"></script> 
-</body>
+            <button class="submit-form-register" type="submit">Registrarse</button>
+
+          </div>
+        </form>
+
+
+
+
+        <form action="/ingreso/login" class="form-register" id="form" method="POST" >
+          <div class="form-register-div">
+            <h1>INGRESAR</h1>
+            <p>Si ya estas Registrado en Bodegas Eclipse, ingresa en tu cuenta con tu Email y la contraseña adecuada:
+            </p>
+
+            <div class="group-register">
+              <input type="email" name="email" id="" required><span class="barra"></span>
+              <label class="label-register" for="">Email</label>
+            </div>
+
+            <div class="group-register">
+              <input type="password" name="password" id="" required><span class="barra"></span>
+              <label class="label-register" for="">Contraseña</label>
+            </div>
+            <button class="submit-form-register" type="submit">Ingresar</button>
+            <div class="group-register">
+              <a href="/">Volver a la tienda</a><br><br>
+              <a href="#">¿Olvidó su contraseña?</a>
+            </div>
+          </div>
+        </form>
+
+
+
+      </main>
+      <%- include("partials/footer") %>
+        <script src="/javascripts/placeholderDate.js"></script>
+  </body>
+
 </html>
