--- a/site/public/stylesheets/users.css
+++ b/site/public/stylesheets/users.css
@@ -170,6 +170,11 @@ left: 0;
 
 }
 
+.error-msg-register{
+  color: var(--color-rosa);
+font-size: 12px;
+}
+
 
 @media (min-width: 768px) {
   .container-register-login form {
