--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -358,7 +358,11 @@
       <%- include('partials/footer') %>
         <!-- /footer -->
 
-
+        <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
+        <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+        <script src="/javascripts/carousel.js"></script>
+        <script src="/javascripts/carusel2.js"></script>
+        <script src="/javascripts/modal.js"></script>
   </body>
 
 </html>
